Compat retro: garde commandes BlockData en <=1.12, FixedMaterial, Optional.of, Files.copy, normalisation sound key
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>